gnome-shell (3.27.92-2) UNRELEASED; urgency=medium

  * Build-depend on libgnome-desktop-3-dev (>= 3.27.90) to carry out
    libgnome-desktop-3-17 transition in experimental

 -- Simon McVittie <smcv@debian.org>  Tue, 06 Mar 2018 10:41:18 +0000

gnome-shell (3.27.92-1) experimental; urgency=medium

  * New upstream release candidate
  * Drop bump-api.patch: Applied in new release

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 05 Mar 2018 20:51:14 -0500

gnome-shell (3.27.91-1) experimental; urgency=medium

  * New upstream development release (LP: #1751070)
  * Bump minimum mutter to 3.27.91
  * Build-Depend on sassc
  * Drop caribou dependencies. GNOME Shell has a new built-in keyboard now.
  * Drop patches applied in new release
  * Cherry-pick bump-api.patch
  * Disable the 6 patches from merge request !4 since they need to
    be rebased

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 23 Feb 2018 18:45:14 -0500

gnome-shell (3.26.2-5) experimental; urgency=medium

  * Team upload
  * Cherry-pick two more patches from upstream gnome-3-26 branch
    related to #881301 etc. (now at 3.26.2-14-g64c857e3f)
  * Apply patches from upstream merge request !4 to address more uses
    of destroyed objects (Closes: #887082, hopefully)

 -- Simon McVittie <smcv@debian.org>  Fri, 26 Jan 2018 17:10:10 +0000

gnome-shell (3.26.2-4) unstable; urgency=medium

  * Port gnome-shell to libnm (Closes: #862677)

 -- Michael Biebl <biebl@debian.org>  Sun, 21 Jan 2018 21:26:21 +0100

gnome-shell (3.26.2-3) unstable; urgency=medium

  * Team upload
  * Convert patch metadata to `git format-patch` style for gbp pq
  * Add patches from upstream gnome-3-26 branch:
    - Update translations: af, ar, cs, is, nb
    - Improve robustness of ::drag-end handlers (GNOME #784545)
    - Reset menuItems and Label objects on change (GNOME #788931)
      - This is one possible source of the crashes in #881301, #880663.
    - Make sure dash item labels are only destroyed once (GNOME #791233)