@@ -69,11 +69,11 @@ Depends: ${gir:Depends},
          gir1.2-gcr-3 (>= 3.7.5),
          gir1.2-glib-2.0 (>= 1.53.0),
          gir1.2-gnomebluetooth-1.0 (>= 3.12.0) [linux-any],
-         gir1.2-gnomedesktop-3.0 (>= 3.12.0),
+         gir1.2-gnomedesktop-3.0 (>= 3.27.90),
          gir1.2-gtk-3.0 (>= 3.16),
          gir1.2-gweather-3.0 (>= 3.25.91),
          gir1.2-ibus-1.0 (>= 1.5.2),
-         gir1.2-mutter-2 (>= 3.27.91),
+         gir1.2-mutter-2 (>= 3.27.92-2~),
          gir1.2-nm-1.0 [linux-any],
          gir1.2-nma-1.0 [linux-any],
          gir1.2-pango-1.0,
@@ -86,7 +86,7 @@ Depends: ${gir:Depends},
          gnome-shell-common (= ${source:Version}),
          gnome-backgrounds (>= 3.13.90),
          gsettings-desktop-schemas (>= 3.21.3),
-         mutter (>= 3.27.91),
+         mutter (>= 3.27.92-2~),
          python3,
          libglib2.0-bin (>= 2.53.0),
 Recommends: chrome-gnome-shell,
