@@ -2,6 +2,7 @@ gnome-shell (3.27.92-2) UNRELEASED; urgency=medium
 
   * Build-depend on libgnome-desktop-3-dev (>= 3.27.90) to carry out
     libgnome-desktop-3-17 transition in experimental
+  * Tighten dependencies on mutter and gir1.2-gnomedesktop-3.0
 
  -- Simon McVittie <smcv@debian.org>  Tue, 06 Mar 2018 10:41:18 +0000
 
